--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ font-family: 'Comfortaa', cursive;
         <center>
             <TABLE border=1><TBODY>
                 <TR align=center>
-                    <TD>Project Name</TD>
+                    <TD>NASA Robotic Mining Competition Computer Science Contribution</TD>
                     <TD>...</TD>
                 <TR align=center>
-                    <TD>Team Members and Email Addresses</TD>
+                    <TD>Taylor Ertrachter:tertrachter@gmail.com   Bailey Hamant:bhamant2017@my.fit.edu   James Spies:jspies2017@my.fit.edu</TD>
                     <TD>...</TD>
                 <TR align=center>
-                    <TD>Faculty Advisor</TD>
+                    <TD>Faculty Advisor: Dr. Marius Silaghi</TD>
                     <TD>...</TD></TR>
             </TBODY></TABLE>
         </center>
