--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ font-family: 'Comfortaa', cursive;
                     <TD>NASA Robotic Mining Competition Computer Science Contribution</TD>
                     <TD>...</TD>
                 <TR align=center>
-                    <TD>Taylor Ertrachter:tertrachter@gmail.com   Bailey Hamant:bhamant2017@my.fit.edu   James Spies:jspies2017@my.fit.edu</TD>
+                    <TD>Taylor Ertrachter:<u>tertrachter@gmail.com</u>&nbsp;&nbsp;&nbsp;Bailey Hamant:<u>bhamant2017@my.fit.edu</u> <br />  
+                    James Spies:<u>jspies2017@my.fit.edu</u></TD>
                     <TD>...</TD>
                 <TR align=center>
                     <TD>Faculty Advisor: Dr. Marius Silaghi</TD>
