--- a/index.html
+++ b/index.html
@@ -79,15 +79,14 @@ font-family: 'Comfortaa', cursive;
         <center>
             <TABLE border=1><TBODY>
                 <TR align=center>
+                    <TD>Project Name:</TD>
                     <TD>NASA Robotic Mining Competition Computer Science Contribution</TD>
-                    <TD>...</TD>
                 <TR align=center>
-                    <TD>Taylor Ertrachter:<u>tertrachter@gmail.com</u>&nbsp;&nbsp;&nbsp;Bailey Hamant:<u>bhamant2017@my.fit.edu</u> <br />  
-                    James Spies:<u>jspies2017@my.fit.edu</u></TD>
-                    <TD>...</TD>
+                    <TD>Team Members and Email Addresses:</TD>
+                    <TD>Taylor Ertrachter: <a href="mailto:tertrachter2017@my.fit.edu">tertrachter2017@my.fit.edu</a> <br> Bailey Hamant: <a href="mailto:bhamant2017@my.fit.edu">bhamant2017@my.fit.edu</a> <br> James Spies: <a href="mailto:jspies2017@my.fit.edu">jspies2017@my.fit.edu</a></TD>
                 <TR align=center>
-                    <TD>Faculty Advisor: Dr. Marius Silaghi</TD>
-                    <TD>...</TD></TR>
+                    <TD>Faculty Advisor:</TD>
+                    <TD>Dr. Marius Silaghi</TD></TR>
             </TBODY></TABLE>
         </center>
         <p>
