--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ font-family: 'Comfortaa', cursive;
             <TABLE border=1><TBODY>
                 <TR align=center>
                     <TD>Plan (Aug 31)</TD>
-                    <TD><a href="NASA LEC Proposal UPDATED.pdf">Plan</a>, <a href="NASA_LEC Powerpoint.pdf">Presentation</a></TD>
+                    <TD><a href="pdfs/NASA LEC Proposal UPDATED.pdf">Plan</a>, <a href="pdfs/NASA_LEC Powerpoint.pdf">Presentation</a></TD>
                 <TR align=center>
                     <TD>Milestone 1 (Sep 28)</TD>
                     <TD><a href="requirement.pdf">Requirement</a>, <a href="design.pdf">Design</a>, <a href="test.pdf">Test</a>, <a href="milestone1.pdf">Presentation</a>, <a href="eval1.pdf">Progress Evaluation</a></TD>
