--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ font-family: 'Comfortaa', cursive;
             <TABLE border=1><TBODY>
                 <TR align=center>
                     <TD>Plan (Aug 31)</TD>
-                    <TD><a href="/resources/docs/NASA_LEC_Project_Proposal_SIGNED.pdf">Plan</a>, <a href="/resources/docs/NASA_LEC Powerpoint.pdf">Presentation</a></TD>
+                    <TD><a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/NASA_LEC_Project_Proposal_SIGNED.pdf">Plan</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/NASA_LEC%20Powerpoint.pdf">Presentation</a></TD>
                 <TR align=center>
                     <TD>Milestone 1 (Sep 28)</TD>
-                    <TD><a href="/resources/docs/Requirements Documentation.pdf">Requirement</a>, <a href="/resources/docs/Design Documentation.pdf">Design</a>, <a href="/resources/docs/Test Plan.pdf">Test</a>, <a href="/resources/docs/Progress Evaluation - Milestone 1.pdf">Presentation</a>, <a href="/resources/docs/Milestone 1 Progress Evaluation.pdf">Progress Evaluation</a></TD>
+                    <TD><a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Requirements%20Documentation.pdf">Requirement</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Design%20Documentation.pdf">Design</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Test%20Plan.pdf">Test</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Progress%20Evaluation%20-%20Milestone%201.pdf">Presentation</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Milestone%201%20Progress%20Evaluation.pdf">Progress Evaluation</a></TD>
                 <TR align=center>
                     <TD>Milestone 2 (Oct 26)</TD>
                     <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval2.pdf">Progress Evaluation</a></TD></TR>
