--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@ font-family: 'Comfortaa', cursive;
                     <TD>Dr. Marius Silaghi</TD></TR>
             </TBODY></TABLE>
         </center>
-        <p>
+        
+        <center>
+        <h3><a href="cad_images.html">CAD Model Pictures</a></h3>
+        </center>
+
         <center>
         <h3>First Semester</h3>
             <TABLE border=1><TBODY>
