Adding Milestone 2 Links
Presentation and Signed Evaluation

--- a/cad_images.html
+++ b/cad_images.html
@@ -50,7 +50,7 @@
 						<section class="posts">	
 							<img src="images/Wireframe.JPG" alt="" />
 							<article>
-								<h3><a href="pdfs/ARTEMIS_detailed_report.pdf">Full Configuration<br />For Robot</a></h3>
+								<h3><a href="pdfs/ARTEMIS_detailed_report.pdf">Drawing Package<br />For Robot</a></h3>
 							</article>
 					</section>
 					</div>
