--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ font-family: 'Comfortaa', cursive;
                     <TD><a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Requirements%20Documentation.pdf">Requirement</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Design%20Documentation.pdf">Design</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Test%20Plan.pdf">Test</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Progress%20Evaluation%20-%20Milestone%201.pdf">Presentation</a>, <a href="https://github.com/tertty/Senior-Design-Website/raw/master/resources/docs/Milestone%201%20Progress%20Evaluation.pdf">Progress Evaluation</a></TD>
                 <TR align=center>
                     <TD>Milestone 2 (Oct 26)</TD>
-                    <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval2.pdf">Progress Evaluation</a></TD></TR>
+                    <TD><a href="pdfs/Milestone_2_Presentation.pdf">Presentation</a>, <a href="pdfs/Milestone_2_Eval_Signed.pdf">Progress Evaluation</a></TD></TR>
                 <TR align=center>
                     <TD>Milestone 3 (Nov 23)</TD>
                     <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval3.pdf">Progress Evaluation</a></TD></TR>
