Updating Milestone 3 Links

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ font-family: 'Comfortaa', cursive;
                     <TD><a href="pdfs/Milestone_2_Presentation.pdf">Presentation</a>, <a href="pdfs/Milestone_2_Eval_Signed.pdf">Progress Evaluation</a></TD></TR>
                 <TR align=center>
                     <TD>Milestone 3 (Nov 23)</TD>
-                    <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval3.pdf">Progress Evaluation</a></TD></TR>
+                    <TD><a href="pdfs/Milestone_3_Presentation.pdf">Presentation</a>, <a href="pdfs/Milestone_3_Progress_Evaluation_Signed.pdf">Progress Evaluation</a></TD></TR>
             </TBODY></TABLE>
         </center>
 
