Adding Milestone 4 Docs to Website

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ font-family: 'Comfortaa', cursive;
                     <TD><a href="plan2.pdf">Plan</a>, <a href="plan2Pres.pdf">Presentation</a></TD>
                 <TR align=center>
                     <TD>Milestone 4 (Feb 17)</TD>
-                    <TD><a href="milestone4.pdf">Presentation</a>, <a href="eval4.pdf">Progress Evaluation</a></TD>
+                    <TD><a href="pdfs/Milestone_4_Presentation.pdf">Presentation</a>, <a href="pdfs/Milestone_4_Progress_Evaluation.pdf">Progress Evaluation</a></TD>
                 <TR align=center>
                     <TD>Milestone 5 (Mar 23)</TD>
                     <TD><a href="poster.pdf">Poster</a>, <a href="ebook.pdf">e-book page</a>, <a href="milestone5.pdf">Presentation</a>, <a href="eval5.pdf">Progress Evaluation</a></TD></TR>
