Add milestone 6 pdfs to website

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ font-family: 'Comfortaa', cursive;
                     <TD><a href="poster.pdf">Poster</a>, <a href="ebook.pdf">e-book page</a>, <a href="pdfs/Milestone_5_Presentation.pdf">Presentation</a>, <a href="pdfs/Milestone_5_Evaluation_Signed.pdf">Progress Evaluation</a></TD></TR>
                 <TR align=center>
                     <TD>Milestone 6 (Apr 20)</TD>
-                    <TD><a href="userManual.pdf">User/Developer Manual</a>, <a href="demoVideo.jpg">Demo Video</a>, <a href="milestone6.pdf">Presentation</a>, <a href="eval6.pdf">Progress Evaluation</a></TD></TR>
+                    <TD><a href="userManual.pdf">User/Developer Manual</a>, <a href="demoVideo.jpg">Demo Video</a>, <a href="pdfs/Milestone_6_Presentation.pdf">Presentation</a>, <a href="pdfs/Milestone_6_Progress_Evaluation_signed.pdf">Progress Evaluation</a></TD></TR>
             </TBODY></TABLE>
         </center>
 
